--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-advanced",
-  "version": "0.0.1-alpha.3",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
