--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "react-advanced",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "cross-env NODE_ENV=production babel ./src --out-dir ./build --ignore *.test.js",
+    "copy-files": "babel-node scripts/copy-files.js",
+    "release": "yarn build && yarn copy-files && npm publish build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +18,13 @@
   "bugs": {
     "url": "https://github.com/timbset/react-advanced/issues"
   },
-  "homepage": "https://github.com/timbset/react-advanced#readme"
+  "homepage": "https://github.com/timbset/react-advanced#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.1.6",
+    "fs-extra": "^6.0.1"
+  }
 }
